tests/conformance/shaclc/negative/directive-after-shape.shaclc
PREFIX ex: <http://example.org/test#>

shape ex:TestShape {
}

PREFIX ex2: <http://example.org/test2#>
